--- a/SeagerPlace3D.html
+++ b/SeagerPlace3D.html
@@ -86,7 +86,7 @@
       });
       var ground = scene.getMeshByName('BackgroundPlane');
       ground.isPickable = false;
-      var balconies = scene.getMeshByName('Balconies');
+      var balconies = scene.getMeshByName('Block A5 Balconies');
       balconies.isPickable = false;
     });
 
