--- a/SeagerPlace3D.html
+++ b/SeagerPlace3D.html
@@ -78,7 +78,7 @@
 
 
     //Model import
-    var buildingMesh = BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "Seager Place A5.glb", scene, function (newMeshes) {
+    var buildingMesh = BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/ChrisFGCS/Test/main/Blender/", "Seager Place (Tex)).glb", scene, function (newMeshes) {
       var helper = scene.createDefaultEnvironment({
         createSkybox: false,
         enableGroundMirror: true,
@@ -86,7 +86,7 @@
       });
       var ground = scene.getMeshByName('BackgroundPlane');
       ground.isPickable = false;
-      var balconies = scene.getMeshByName('Block A5 Balconies');
+      var balconies = scene.getMeshByName('Balconies');
       balconies.isPickable = false;
     });
 
@@ -125,7 +125,7 @@
             }
             currentMesh = pointerInfo.pickInfo.pickedMesh;
             oldColour = currentMesh.material.emissiveColor;
-            if (currentMesh != scene.getMeshByName(`not-runs`)) {
+            if (currentMesh != scene.getMeshByName(`Blocks`)) {
               currentMesh.material.emissiveColor = new BABYLON.Color3(0.0,0.0,0.5);
               rect1.alpha = 1;
               label.text = "Run ID: \n" + currentMesh.name;
